[package]
authors = ["tbrunain <t.brunain@protonmail.com"]
description = "An Avalanche SDK"
edition = "2018"
license = "BSD-3-Clause"
name = "avalanche-rs"
version = "0.0.106"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ring = "0.16.15"
rust-base58 = "0.0.4"
serde = "1.0.120"
serde_derive = "1.0.120"
serde_json = "1.0.61"
tracing = "0.1.22"
uuid = { version = "0.8.2", features = ["serde", "v4"] }

[dev-dependencies]

